<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="camera_label">OMAP3 Camera</string>
    <string name="video_camera_label">OMAP3 Camcorder</string>
    <string name="gallery_camera_bucket_name">OMAP3 Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">OMAP3 Camera videos</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing SD card\u2026</string>
    <string name="confirm_restore_title">Restore defaults</string>
    <string name="confirm_restore_message">Camera settings will be restored to defaults.</string>
    <string name="review_play">PLAY</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">OK</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="pref_omap3_camera_recordlocation_title">Store location</string>
    <string name="pref_omap3_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_omap3_camera_recordlocation_entry_off">Off</string>
    <string name="pref_omap3_camera_recordlocation_entry_on">On</string>
    <string name="pref_omap3_video_quality_title">Video quality</string>
    <string name="pref_omap3_video_quality_default" translatable="false">high</string>
    <string name="pref_omap3_video_quality_entry_high">High (30m)</string>
    <string name="pref_omap3_video_quality_entry_low">Low (30m)</string>
    <string name="pref_omap3_video_quality_entry_mms">MMS (Low, 30s)</string>
    <string name="pref_omap3_video_quality_entry_youtube">YouTube (High, 10m)</string>
    <string name="pref_omap3_camera_settings_category">Camera settings</string>
    <string name="pref_omap3_camcorder_settings_category">Camcorder settings</string>
	 <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_videoframerate_category">Video FrameRate</string>
    <string name="pref_camera_videoframerate_default">24</string>
    <string name="pref_camera_videoframerate_title">Select Video FrameRate</string>
    <string name="pref_camera_videoframerate_entry_1">5</string>
    <string name="pref_camera_videoframerate_entry_2">10</string>
    <string name="pref_camera_videoframerate_entry_3">15</string>
    <string name="pref_camera_videoframerate_entry_4">20</string>
    <string name="pref_camera_videoframerate_entry_5">24</string>
    <string name="pref_camera_videoframerate_entry_6">25</string>
    <string name="pref_camera_videoframerate_entry_7">30</string>
    <string name="pref_camera_videoframerate_entry_8">33</string>
    <string name="pref_camera_videobitrate_category">Video BitRate</string>
    <string name="pref_camera_videobitrate_default">4096000</string>
    <string name="pref_camera_videobitrate_title">Select Video bitRate</string>
    <string name="pref_camera_videobitrate_entry_0">Auto</string>
    <string name="pref_camera_videobitrate_entry_1">64K</string>
    <string name="pref_camera_videobitrate_entry_2">128K</string>
    <string name="pref_camera_videobitrate_entry_3">192K</string>
    <string name="pref_camera_videobitrate_entry_4">240K</string>
    <string name="pref_camera_videobitrate_entry_5">320K</string>
    <string name="pref_camera_videobitrate_entry_6">360K</string>
    <string name="pref_camera_videobitrate_entry_7">384K</string>
    <string name="pref_camera_videobitrate_entry_8">420K</string>
    <string name="pref_camera_videobitrate_entry_9">768K</string>
    <string name="pref_camera_videobitrate_entry_10">1M</string>
    <string name="pref_camera_videobitrate_entry_11">1.5M</string>
    <string name="pref_camera_videobitrate_entry_12">2M</string>
    <string name="pref_camera_videobitrate_entry_13">4M</string>
    <string name="pref_camera_videobitrate_entry_14">6M</string>
    <string name="pref_camera_videobitrate_entry_15">8M</string>
    <string name="pref_camera_videobitrate_entry_16">10M</string>
    <string name="pref_camera_audioencoder_category">Audio Encoder</string>
    <string name="pref_camera_audioencoder_default">3</string>
    <string name="pref_camera_audioencoder_title">Select Audio Encoder</string>
    <string name="pref_camera_audioencoder_entry_1">AMR-NB</string>
    <string name="pref_camera_audioencoder_entry_3">AAC</string>
    <string name="pref_camera_audioencoder_entry_0">No Audio</string>
    <string name="pref_camera_audioencoder_dialogtitle">Audio Encoder</string>
    <string name="pref_camera_videoencoder_category">Video Encoder</string>
    <string name="pref_camera_videoencoder_default">2</string>
    <string name="pref_camera_videoencoder_title">Select Video Encoder</string>
    <string name="pref_camera_videoencoder_entry_1">H263</string>
    <string name="pref_camera_videoencoder_entry_2">H264</string>
    <string name="pref_camera_videoencoder_entry_3">MPEG4</string>
    <string name="pref_camera_video_format_default" translatable="false">10</string>
    <string name="pref_camera_video_format_title">Video format</string>
    <string name="pref_camera_video_format_entry_1">QCIF 176x144</string>
    <string name="pref_camera_video_format_entry_2">CIF 352x288</string>
    <string name="pref_camera_video_format_entry_3">QVGA 320x240</string>
    <string name="pref_camera_video_format_entry_4">VGA 640x480</string>
    <string name="pref_camera_video_format_entry_5">TV NTSC 704x480</string>
    <string name="pref_camera_video_format_entry_6">TV PAL 704x576</string>
    <string name="pref_camera_video_format_entry_7">DVD-Video NTSC 720x480</string>
    <string name="pref_camera_video_format_entry_8">DVD-Video PAL 720x576</string>
    <string name="pref_camera_video_format_entry_9">WVGA 800x480</string>
    <string name="pref_camera_video_format_entry_10">1280x720</string>
    <string name="pref_camera_video_format_dialogtitle">Video format</string>
    <string name="pref_omap3_camera_picturesize_title">Picture size</string>
    <string name="pref_omap3_camera_picturesize_entry_3280x2464">8M Pixels</string>
    <string name="pref_omap3_camera_picturesize_entry_2592x1944">5M Pixels</string>
    <string name="pref_omap3_camera_picturesize_entry_2048x1536">3M Pixels</string>
    <string name="pref_omap3_camera_picturesize_entry_1600x1200">2M Pixels</string>
    <string name="pref_omap3_camera_picturesize_entry_1280x960">1M Pixels</string>
    <string name="pref_omap3_camera_picturesize_entry_640x480">VGA</string>
    <string name="pref_omap3_camera_picturesize_entry_320x240">QVGA</string>
    <string name="pref_omap3_camera_previewsize_title">Preview size</string>
    <string name="pref_omap3_camera_previewsize_default">640x480</string>
    <string name="pref_omap3_camera_previewsize_entry_qcif">QCIF</string>
    <string name="pref_omap3_camera_previewsize_entry_cif">CIF</string>
    <string name="pref_omap3_camera_previewsize_entry_qvga">QVGA</string>
    <string name="pref_omap3_camera_previewsize_entry_vga">VGA</string>
    <string name="pref_omap3_camera_previewsize_entry_pal">PAL</string>
    <string name="pref_omap3_camera_previewsize_entry_ntsc">NTSC</string>
    <string name="pref_omap3_camera_previewsize_entry_d1">D1</string>
    <string name="pref_omap3_camera_previewsize_entry_hd">720p</string>
    <string name="pref_omap3_camera_previewframerate_title">Select FPS</string>
    <string name="pref_omap3_camera_previewframerate_default">30</string>
    <string name="pref_omap3_camera_previewframerate_entry_ten">10</string>
    <string name="pref_omap3_camera_previewframerate_entry_fifteen">15</string>
    <string name="pref_omap3_camera_previewframerate_entry_twenty">20</string>
    <string name="pref_omap3_camera_previewframerate_entry_thirty">30</string>
    <string name="pref_omap3_camera_jpegquality_default" translatable="false">superfine</string>
    <string name="pref_omap3_camera_jpegquality_title">Picture quality</string>
    <string name="pref_omap3_camera_jpegquality_entry_superfine">Super fine</string>
    <string name="pref_omap3_camera_jpegquality_entry_fine">Fine</string>
    <string name="pref_omap3_camera_jpegquality_entry_normal">Normal</string>
    <string name="pref_omap3_camera_saturation_title">Saturation</string>
    <string name="pref_omap3_camera_saturation_default">100</string>
    <string name="pref_omap3_camera_saturation_entry_low">Low</string>
    <string name="pref_omap3_camera_sharpness_title">Sharpness</string>
    <string name="pref_omap3_camera_sharpness_default">0</string>
    <string name="pref_omap3_camera_brightness_title">Brightness</string>
    <string name="pref_omap3_camera_brightness_default">100</string>
    <string name="pref_omap3_camera_contrast_title">Contrast</string>
    <string name="pref_omap3_camera_contrast_default">100</string>
    <string name="pref_omap3_camera_mode_title">Capture Mode</string>
    <string name="pref_omap3_camera_mode_default">high-quality</string>
    <string name="pref_omap3_camera_ipp_title">Image Post-Processing</string>
    <string name="pref_omap3_camera_ipp_default">0</string>
    <string name="pref_omap3_camera_shutter_title">Shutter</string>
    <string name="pref_omap3_camera_shutter_default">true</string>
    <string name="pref_omap3_camera_thumbnail_title">Thumbnail Preview</string>
    <string name="pref_omap3_camera_thumbnail_default">enabled</string>
    <string name="pref_omap3_camera_metermode_title">Metering mode</string>
    <string name="pref_omap3_camera_metermode_default">average</string>
    <string name="pref_omap3_camera_iso_title">ISO</string>
    <string name="pref_omap3_camera_iso_entry_default">auto</string>
    <string name="pref_omap3_camera_caf_title">Continuous Autofocus</string>
    <string name="pref_omap3_camera_caf_default">0</string>
    <string name="pref_omap3_camera_exposuremode_title">Exposure Mode</string>
    <string name="pref_omap3_camera_exposuremode_default">0</string>
    <string name="pref_omap3_camera_focusmode_default" translatable="false">auto</string>
    <string name="pref_omap3_camera_focusmode_title">Focus mode</string>
    <string name="pref_omap3_camera_flashmode_default" translatable="false">on</string>
    <string name="pref_omap3_camera_flashmode_title">Flash mode</string>
    <string name="pref_omap3_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_omap3_camera_whitebalance_title">White balance</string>
    <string name="pref_omap3_camera_coloreffect_default" translatable="false">none</string>
    <string name="pref_omap3_camera_coloreffect_title">Color effect</string>
    <string name="pref_omap3_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_omap3_camera_scenemode_title">Scene mode</string>
    <string name="pref_omap3_camera_quickcapture_title">Quick capture</string>
    <string name="pref_omap3_camera_quickcapture_default" translatable="false">off</string>
    <string name="pref_omap3_exposure_title">Exposure</string>
    <string name="pref_omap3_exposure_default" translatable="false">0</string>
    <string name="pref_omap3_camera_raw_title">RAW Dump</string>
    <string name="pref_omap3_camera_raw_default">false</string>
    <string name="pref_omap3_camera_antibanding_title">Antibanding</string>
    <string name="pref_omap3_camera_antibanding_default">off</string>
    <string name="pref_omap3_camera_manualfocus_title">Manual Focus</string>
    <string name="pref_omap3_camera_manualfocus_default" translatable="false">-1</string>
    <string name="pref_omap3_camera_burst_title">Continuous capture</string>
    <string name="pref_omap3_camera_burst_default">0</string>
</resources>